--- a/team-gavin/Starbug/Storydoard/Main.storyboard
+++ b/team-gavin/Starbug/Storydoard/Main.storyboard
@@ -42,7 +42,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="XrL-Rc-uJg" kind="show" id="iLE-wQ-Wl5"/>
+                                    <segue destination="XrL-Rc-uJg" kind="show" id="DOF-gy-jqO"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w23-cb-yiR">
@@ -139,10 +139,10 @@
             </objects>
             <point key="canvasLocation" x="1076" y="133.5832083958021"/>
         </scene>
-        <!--Storyboard Reference-->
+        <!--GameRecords-->
         <scene sceneID="Ccf-Ws-cW3">
             <objects>
-                <viewControllerPlaceholder id="XrL-Rc-uJg" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="GameRecords" id="XrL-Rc-uJg" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZCt-YK-dIW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1774" y="358"/>
