--- a/team-gavin/Starbug/Storydoard/Main.storyboard
+++ b/team-gavin/Starbug/Storydoard/Main.storyboard
@@ -19,6 +19,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="xfb-ru-edl">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qc1-Hi-HJA">
                                 <rect key="frame" x="87" y="439" width="200" height="30"/>
                                 <color key="backgroundColor" red="0.25490196078431371" green="0.49411764705882355" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -115,12 +118,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="xfb-ru-edl" secondAttribute="bottom" id="0ne-ww-Uc3"/>
+                            <constraint firstItem="xfb-ru-edl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="2hN-uq-zLY"/>
                             <constraint firstItem="Vn7-RA-yih" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="31C-SL-oIX"/>
                             <constraint firstItem="w23-cb-yiR" firstAttribute="top" secondItem="Vn7-RA-yih" secondAttribute="bottom" constant="30" id="3nm-6X-6m2"/>
                             <constraint firstItem="qc1-Hi-HJA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="6mG-MB-Rp2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xfb-ru-edl" secondAttribute="trailing" id="9Gb-pq-Mch"/>
                             <constraint firstItem="Vn7-RA-yih" firstAttribute="top" secondItem="qc1-Hi-HJA" secondAttribute="bottom" constant="30" id="Aiw-uJ-vbL"/>
                             <constraint firstItem="Ybg-dk-HXg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="Ceo-VL-vGI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Vn7-RA-yih" secondAttribute="trailing" constant="88" id="N8o-1Y-ueV"/>
+                            <constraint firstItem="xfb-ru-edl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NPq-9E-dQL"/>
                             <constraint firstItem="qc1-Hi-HJA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="375" id="X6h-Xc-7Fk"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qc1-Hi-HJA" secondAttribute="trailing" constant="88" id="aTc-Tl-gPM"/>
                             <constraint firstItem="Ybg-dk-HXg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="ceb-vd-eBe"/>
@@ -172,21 +179,23 @@
                                     <action selector="goRPSGame:" destination="yUz-Zb-gFy" eventType="touchUpInside" id="yAX-ba-vmr"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Money" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmN-nF-h9t">
-                                <rect key="frame" x="253" y="60" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKp-DR-NC5">
-                                <rect key="frame" x="263" y="104" width="37" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejX-r3-gWr">
+                                <rect key="frame" x="285" y="166" width="37" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejX-r3-gWr">
-                                <rect key="frame" x="263" y="164" width="37" height="20"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coin" translatesAutoresizingMaskIntoConstraints="NO" id="a2a-yN-r6n">
+                                <rect key="frame" x="245" y="105" width="48" height="18"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coin" translatesAutoresizingMaskIntoConstraints="NO" id="VTB-Ow-CAb">
+                                <rect key="frame" x="245" y="166" width="48" height="18"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKp-DR-NC5">
+                                <rect key="frame" x="285" y="103" width="37" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -195,11 +204,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="JmN-nF-h9t" firstAttribute="height" secondItem="Yg8-Ad-q5W" secondAttribute="height" multiplier="0.6" id="4JJ-JR-ZCZ"/>
                             <constraint firstItem="xSe-nD-zLo" firstAttribute="top" secondItem="Yg8-Ad-q5W" secondAttribute="bottom" constant="20" id="7rV-Dg-oOs"/>
                             <constraint firstItem="xSe-nD-zLo" firstAttribute="leading" secondItem="I7t-dX-Gff" secondAttribute="leading" constant="40" id="8mA-e8-Oky"/>
                             <constraint firstItem="Yg8-Ad-q5W" firstAttribute="height" secondItem="Voh-t4-Vas" secondAttribute="height" multiplier="0.06" id="JQV-OJ-VRO"/>
-                            <constraint firstItem="JmN-nF-h9t" firstAttribute="width" secondItem="Yg8-Ad-q5W" secondAttribute="width" multiplier="0.3" id="MMC-hW-ref"/>
                             <constraint firstItem="xSe-nD-zLo" firstAttribute="height" secondItem="Voh-t4-Vas" secondAttribute="height" multiplier="0.06" id="Vzg-4a-iuN"/>
                             <constraint firstItem="Yg8-Ad-q5W" firstAttribute="top" secondItem="I7t-dX-Gff" secondAttribute="top" constant="30" id="ekE-km-kVI"/>
                             <constraint firstItem="I7t-dX-Gff" firstAttribute="trailing" secondItem="xSe-nD-zLo" secondAttribute="trailing" constant="40" id="fKQ-dn-BfS"/>
@@ -253,4 +260,8 @@
             <point key="canvasLocation" x="116" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background" width="2310" height="1534"/>
+        <image name="coin" width="48" height="48"/>
+    </resources>
 </document>
