--- a/team-gavin/Starbug/Storydoard/GameRecords.storyboard
+++ b/team-gavin/Starbug/Storydoard/GameRecords.storyboard
@@ -21,7 +21,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VEu-Ue-T6c">
-                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
+                                <rect key="frame" x="0.0" y="50" width="414" height="686"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCell" rowHeight="45" id="WzG-HG-QoD" customClass="GameRecordCell" customModule="Starbug" customModuleProvider="target">
@@ -108,12 +108,21 @@
                                     <outlet property="delegate" destination="k6I-ER-YoF" id="rpm-Uk-TJS"/>
                                 </connections>
                             </tableView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zBT-xM-d3N">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="遊戲紀錄" id="BQy-7H-rvv">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" id="VVp-S9-joN"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="VEu-Ue-T6c" firstAttribute="leading" secondItem="fXR-yr-fOp" secondAttribute="leading" id="6DZ-iB-Mzb"/>
                             <constraint firstItem="VEu-Ue-T6c" firstAttribute="bottom" secondItem="fXR-yr-fOp" secondAttribute="bottom" id="O6D-by-bho"/>
-                            <constraint firstItem="VEu-Ue-T6c" firstAttribute="top" secondItem="fXR-yr-fOp" secondAttribute="top" id="Oi6-hT-tem"/>
+                            <constraint firstItem="VEu-Ue-T6c" firstAttribute="top" secondItem="fXR-yr-fOp" secondAttribute="top" constant="30" id="Oi6-hT-tem"/>
                             <constraint firstItem="VEu-Ue-T6c" firstAttribute="trailing" secondItem="fXR-yr-fOp" secondAttribute="trailing" id="um8-8D-QFU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fXR-yr-fOp"/>
